--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -1609,7 +1609,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "1c606da1",
+   "id": "312f3669",
    "metadata": {},
    "outputs": [
     {
@@ -1739,7 +1739,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "ea03ead3",
+   "id": "5eddaaab",
    "metadata": {},
    "outputs": [
     {
@@ -1777,7 +1777,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "b2b815e6",
+   "id": "28a2688a",
    "metadata": {},
    "outputs": [
     {
@@ -1816,7 +1816,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "bd73c012",
+   "id": "7c40658e",
    "metadata": {},
    "outputs": [
     {
@@ -1854,7 +1854,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "13d059fd",
+   "id": "4a9bb431",
    "metadata": {},
    "outputs": [
     {
@@ -1893,7 +1893,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "167647ca",
+   "id": "78bef0d4",
    "metadata": {},
    "outputs": [
     {
@@ -1931,7 +1931,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "a270053c",
+   "id": "82498788",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1942,7 +1942,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "86caf636",
+   "id": "84481f0a",
    "metadata": {},
    "outputs": [
     {
@@ -2175,7 +2175,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "4e5e0d4a",
+   "id": "8776532d",
    "metadata": {},
    "outputs": [
     {
@@ -2217,7 +2217,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "52982a0b",
+   "id": "23939204",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2230,7 +2230,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "bdc2f42c",
+   "id": "2375c61e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2243,7 +2243,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "1e8a4bdc",
+   "id": "fe8ab43d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2256,7 +2256,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "a7585d3f",
+   "id": "8c825aa6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2269,7 +2269,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "fac2a3c7",
+   "id": "61113450",
    "metadata": {},
    "outputs": [
     {
@@ -2305,7 +2305,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "eeaf33ce",
+   "id": "0a7b6e62",
    "metadata": {},
    "outputs": [
     {
@@ -2341,7 +2341,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "74fa498e",
+   "id": "b090983e",
    "metadata": {},
    "outputs": [
     {
@@ -2484,7 +2484,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "8c2bb01f",
+   "id": "bd098e8b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2495,7 +2495,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "d18b073b",
+   "id": "ef6835f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2506,7 +2506,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "6ae304fa",
+   "id": "ac44f565",
    "metadata": {},
    "outputs": [
     {
@@ -2660,7 +2660,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "649f059b",
+   "id": "3d0fd207",
    "metadata": {},
    "outputs": [
     {
@@ -2809,7 +2809,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "80d7787c",
+   "id": "6c9e0afe",
    "metadata": {},
    "outputs": [
     {
@@ -2956,8 +2956,163 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 94,
+   "id": "f89ae9ab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#git push"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "d7ee3a52",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>School Type</th>\n",
+       "      <th>Total Students</th>\n",
+       "      <th>Total School Budget</th>\n",
+       "      <th>Per Student Budget</th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Cabrera High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1858</td>\n",
+       "      <td>$1,081,356.00</td>\n",
+       "      <td>$582.00</td>\n",
+       "      <td>83.061895</td>\n",
+       "      <td>83.975780</td>\n",
+       "      <td>94.133477</td>\n",
+       "      <td>97.039828</td>\n",
+       "      <td>91.334769</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Thomas High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1635</td>\n",
+       "      <td>$1,043,130.00</td>\n",
+       "      <td>$638.00</td>\n",
+       "      <td>83.418349</td>\n",
+       "      <td>83.848930</td>\n",
+       "      <td>93.272171</td>\n",
+       "      <td>97.308869</td>\n",
+       "      <td>90.948012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Griffin High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1468</td>\n",
+       "      <td>$917,500.00</td>\n",
+       "      <td>$625.00</td>\n",
+       "      <td>83.351499</td>\n",
+       "      <td>83.816757</td>\n",
+       "      <td>93.392371</td>\n",
+       "      <td>97.138965</td>\n",
+       "      <td>90.599455</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wilson High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>2283</td>\n",
+       "      <td>$1,319,574.00</td>\n",
+       "      <td>$578.00</td>\n",
+       "      <td>83.274201</td>\n",
+       "      <td>83.989488</td>\n",
+       "      <td>93.867718</td>\n",
+       "      <td>96.539641</td>\n",
+       "      <td>90.582567</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Pena High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>962</td>\n",
+       "      <td>$585,858.00</td>\n",
+       "      <td>$609.00</td>\n",
+       "      <td>83.839917</td>\n",
+       "      <td>84.044699</td>\n",
+       "      <td>94.594595</td>\n",
+       "      <td>95.945946</td>\n",
+       "      <td>90.540541</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    School Type  Total Students Total School Budget  \\\n",
+       "Cabrera High School     Charter            1858       $1,081,356.00   \n",
+       "Thomas High School      Charter            1635       $1,043,130.00   \n",
+       "Griffin High School     Charter            1468         $917,500.00   \n",
+       "Wilson High School      Charter            2283       $1,319,574.00   \n",
+       "Pena High School        Charter             962         $585,858.00   \n",
+       "\n",
+       "                    Per Student Budget  Average Math Score  \\\n",
+       "Cabrera High School            $582.00           83.061895   \n",
+       "Thomas High School             $638.00           83.418349   \n",
+       "Griffin High School            $625.00           83.351499   \n",
+       "Wilson High School             $578.00           83.274201   \n",
+       "Pena High School               $609.00           83.839917   \n",
+       "\n",
+       "                     Average Reading Score  % Passing Math  % Passing Reading  \\\n",
+       "Cabrera High School              83.975780       94.133477          97.039828   \n",
+       "Thomas High School               83.848930       93.272171          97.308869   \n",
+       "Griffin High School              83.816757       93.392371          97.138965   \n",
+       "Wilson High School               83.989488       93.867718          96.539641   \n",
+       "Pena High School                 84.044699       94.594595          95.945946   \n",
+       "\n",
+       "                     % Overall Passing  \n",
+       "Cabrera High School          91.334769  \n",
+       "Thomas High School           90.948012  \n",
+       "Griffin High School          90.599455  \n",
+       "Wilson High School           90.582567  \n",
+       "Pena High School             90.540541  "
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Sort and show top five schools.\n",
+    "top_schools = per_school_summary_df.sort_values([\"% Overall Passing\"], ascending=False)\n",
+    "\n",
+    "top_schools.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "a93fdf03",
+   "id": "4b90071a",
    "metadata": {},
    "outputs": [],
    "source": []
