--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -1609,7 +1609,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "abbd583c",
+   "id": "2e388166",
    "metadata": {},
    "outputs": [
     {
@@ -1739,7 +1739,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "4fc34ea0",
+   "id": "15f45161",
    "metadata": {},
    "outputs": [
     {
@@ -1777,7 +1777,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "a0aadc2f",
+   "id": "738793c3",
    "metadata": {},
    "outputs": [
     {
@@ -1816,7 +1816,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "72193952",
+   "id": "fdfa1a88",
    "metadata": {},
    "outputs": [
     {
@@ -1854,7 +1854,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "1ef79f81",
+   "id": "367baea3",
    "metadata": {},
    "outputs": [
     {
@@ -1893,7 +1893,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "73368d0f",
+   "id": "573b4b49",
    "metadata": {},
    "outputs": [
     {
@@ -1931,7 +1931,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "a23c6fa9",
+   "id": "ef2b4995",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1942,7 +1942,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "b1efdda9",
+   "id": "93357019",
    "metadata": {},
    "outputs": [
     {
@@ -2175,7 +2175,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "81c9044b",
+   "id": "4c797ed6",
    "metadata": {},
    "outputs": [
     {
@@ -2217,7 +2217,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "1b69303b",
+   "id": "adb0d649",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2230,7 +2230,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "c0842d47",
+   "id": "25d283b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2243,7 +2243,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "db999907",
+   "id": "3b750965",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2256,7 +2256,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "91b3ecfd",
+   "id": "88c8be25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2269,7 +2269,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "2218c381",
+   "id": "ddf1da41",
    "metadata": {},
    "outputs": [
     {
@@ -2305,7 +2305,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "138e6ca9",
+   "id": "e3cd44a3",
    "metadata": {},
    "outputs": [
     {
@@ -2341,7 +2341,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "29ab6270",
+   "id": "59c43244",
    "metadata": {},
    "outputs": [
     {
@@ -2484,7 +2484,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "72e49938",
+   "id": "d4a711d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2495,7 +2495,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "0575856b",
+   "id": "ce5e20a9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2506,7 +2506,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "b66b6c71",
+   "id": "33c996b0",
    "metadata": {},
    "outputs": [
     {
@@ -2660,7 +2660,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "652b9593",
+   "id": "5d197e9a",
    "metadata": {},
    "outputs": [
     {
@@ -2809,7 +2809,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "ed09e598",
+   "id": "28fcacb3",
    "metadata": {},
    "outputs": [
     {
@@ -2957,7 +2957,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "06779769",
+   "id": "b51b4dd4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2967,7 +2967,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "f87bc168",
+   "id": "0bdd5835",
    "metadata": {},
    "outputs": [
     {
@@ -3112,7 +3112,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "82fcee1a",
+   "id": "97af5495",
    "metadata": {
     "scrolled": true
    },
@@ -3259,7 +3259,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "017487e9",
+   "id": "c19d98dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3269,7 +3269,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "a8e84124",
+   "id": "0dd3af19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3286,7 +3286,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "c33d9562",
+   "id": "b856bedd",
    "metadata": {},
    "outputs": [
     {
@@ -3525,7 +3525,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "2f835092",
+   "id": "a108af4f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3542,7 +3542,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "974c0fcc",
+   "id": "676540b4",
    "metadata": {},
    "outputs": [
     {
@@ -3579,7 +3579,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "49ba0b3b",
+   "id": "fe90d5ba",
    "metadata": {},
    "outputs": [
     {
@@ -3616,7 +3616,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "dbff0d15",
+   "id": "3321d6d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3633,7 +3633,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "8c59dd82",
+   "id": "eecbb6fd",
    "metadata": {},
    "outputs": [
     {
@@ -3670,7 +3670,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "3515ba0b",
+   "id": "7522bcaf",
    "metadata": {},
    "outputs": [
     {
@@ -3776,7 +3776,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "69744997",
+   "id": "e4625929",
    "metadata": {},
    "outputs": [
     {
@@ -3882,7 +3882,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "0e487b16",
+   "id": "d0faa5fc",
    "metadata": {},
    "outputs": [
     {
@@ -3989,7 +3989,7 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "id": "59b7ebd9",
+   "id": "59730bd8",
    "metadata": {},
    "outputs": [
     {
@@ -4095,7 +4095,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "2610b8ce",
+   "id": "7257ea41",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4105,7 +4105,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "3d8e75e0",
+   "id": "cd285b78",
    "metadata": {},
    "outputs": [
     {
@@ -4135,7 +4135,7 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "id": "87b95aae",
+   "id": "2de42917",
    "metadata": {},
    "outputs": [
     {
@@ -4174,7 +4174,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "48d493c6",
+   "id": "a8867e1d",
    "metadata": {},
    "outputs": [
     {
@@ -4213,7 +4213,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "521440d9",
+   "id": "ce78ac68",
    "metadata": {},
    "outputs": [
     {
@@ -4240,7 +4240,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "67989ac1",
+   "id": "0346b98c",
    "metadata": {},
    "outputs": [
     {
@@ -4267,7 +4267,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "85a1953b",
+   "id": "9e114aa0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4279,7 +4279,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "be5971d7",
+   "id": "d10d9cae",
    "metadata": {},
    "outputs": [
     {
@@ -4617,7 +4617,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "0238b253",
+   "id": "03593c28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4636,7 +4636,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "bff424d6",
+   "id": "a44db025",
    "metadata": {},
    "outputs": [
     {
@@ -4662,7 +4662,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "77228498",
+   "id": "40bc1642",
    "metadata": {},
    "outputs": [
     {
@@ -4688,7 +4688,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "39abd0fb",
+   "id": "e226fe1c",
    "metadata": {},
    "outputs": [
     {
@@ -4714,7 +4714,7 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "b5f0d648",
+   "id": "e927daab",
    "metadata": {},
    "outputs": [
     {
@@ -4740,7 +4740,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "cfb88834",
+   "id": "d9a5f6b0",
    "metadata": {},
    "outputs": [
     {
@@ -4766,7 +4766,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "611276f5",
+   "id": "ea1437bb",
    "metadata": {},
    "outputs": [
     {
@@ -4885,7 +4885,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "f472a266",
+   "id": "c77aa827",
    "metadata": {},
    "outputs": [
     {
@@ -5007,7 +5007,7 @@
   {
    "cell_type": "code",
    "execution_count": 133,
-   "id": "9e27a355",
+   "id": "355e714f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5017,7 +5017,7 @@
   {
    "cell_type": "code",
    "execution_count": 134,
-   "id": "fcc696b3",
+   "id": "bc189070",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5029,7 +5029,7 @@
   {
    "cell_type": "code",
    "execution_count": 135,
-   "id": "4934cd7a",
+   "id": "68d8907b",
    "metadata": {},
    "outputs": [
     {
@@ -5193,7 +5193,7 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "id": "f34c0137",
+   "id": "23a1d3ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5212,7 +5212,7 @@
   {
    "cell_type": "code",
    "execution_count": 137,
-   "id": "0dcd33b6",
+   "id": "388cd16e",
    "metadata": {},
    "outputs": [
     {
@@ -5314,7 +5314,7 @@
   {
    "cell_type": "code",
    "execution_count": 138,
-   "id": "be803556",
+   "id": "0ce5a115",
    "metadata": {},
    "outputs": [
     {
@@ -5419,7 +5419,223 @@
   {
    "cell_type": "code",
    "execution_count": 139,
-   "id": "af298099",
+   "id": "36b45b48",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# git push"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "id": "ece84f1d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate averages for the desired columns.\n",
+    "type_math_scores = per_school_summary_df.groupby([\"School Type\"]).mean()[\"Average Math Score\"]\n",
+    "\n",
+    "type_reading_scores = per_school_summary_df.groupby([\"School Type\"]).mean()[\"Average Reading Score\"]\n",
+    "\n",
+    "type_passing_math = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Passing Math\"]\n",
+    "\n",
+    "type_passing_reading = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Passing Reading\"]\n",
+    "\n",
+    "type_overall_passing = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Overall Passing\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "id": "39d2dc02",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>School Type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Charter</th>\n",
+       "      <td>83.473852</td>\n",
+       "      <td>83.896421</td>\n",
+       "      <td>93.620830</td>\n",
+       "      <td>96.586489</td>\n",
+       "      <td>90.432244</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>District</th>\n",
+       "      <td>76.956733</td>\n",
+       "      <td>80.966636</td>\n",
+       "      <td>66.548453</td>\n",
+       "      <td>80.799062</td>\n",
+       "      <td>53.672208</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Average Math Score  Average Reading Score  % Passing Math  \\\n",
+       "School Type                                                              \n",
+       "Charter               83.473852              83.896421       93.620830   \n",
+       "District              76.956733              80.966636       66.548453   \n",
+       "\n",
+       "             % Passing Reading  % Overall Passing  \n",
+       "School Type                                        \n",
+       "Charter              96.586489          90.432244  \n",
+       "District             80.799062          53.672208  "
+      ]
+     },
+     "execution_count": 141,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Assemble into DataFrame.\n",
+    "type_summary_df = pd.DataFrame({\n",
+    "          \"Average Math Score\" : type_math_scores,\n",
+    "          \"Average Reading Score\": type_reading_scores,\n",
+    "          \"% Passing Math\": type_passing_math,\n",
+    "          \"% Passing Reading\": type_passing_reading,\n",
+    "          \"% Overall Passing\": type_overall_passing})\n",
+    "\n",
+    "type_summary_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "id": "d266b105",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>School Type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Charter</th>\n",
+       "      <td>83.5</td>\n",
+       "      <td>83.9</td>\n",
+       "      <td>94</td>\n",
+       "      <td>97</td>\n",
+       "      <td>90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>District</th>\n",
+       "      <td>77.0</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>67</td>\n",
+       "      <td>81</td>\n",
+       "      <td>54</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Average Math Score Average Reading Score % Passing Math  \\\n",
+       "School Type                                                           \n",
+       "Charter                   83.5                  83.9             94   \n",
+       "District                  77.0                  81.0             67   \n",
+       "\n",
+       "            % Passing Reading % Overall Passing  \n",
+       "School Type                                      \n",
+       "Charter                    97                90  \n",
+       "District                   81                54  "
+      ]
+     },
+     "execution_count": 142,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Formatting\n",
+    "type_summary_df[\"Average Math Score\"] = type_summary_df[\"Average Math Score\"].map(\"{:.1f}\".format)\n",
+    "\n",
+    "type_summary_df[\"Average Reading Score\"] = type_summary_df[\"Average Reading Score\"].map(\"{:.1f}\".format)\n",
+    "\n",
+    "type_summary_df[\"% Passing Math\"] = type_summary_df[\"% Passing Math\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "type_summary_df[\"% Passing Reading\"] = type_summary_df[\"% Passing Reading\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "type_summary_df[\"% Overall Passing\"] = type_summary_df[\"% Overall Passing\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "type_summary_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "id": "6ade3136",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5429,7 +5645,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8e23f29",
+   "id": "8010803b",
    "metadata": {},
    "outputs": [],
    "source": []
